@@ -23,7 +23,6 @@
 package org.eclipse.tractusx.irs.aaswrapper.registry.domain;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -51,7 +50,8 @@ public class DecentralDigitalTwinRegistryService implements DigitalTwinRegistryS
         log.info("Retrieved AAS Identification for DigitalTwinRegistryKey: {}", key);
         final DiscoveryFinderRequest onlyBpn = new DiscoveryFinderRequest(List.of("bpn"));
         final List<String> providedBpn = List.of(key.bpn());
-        final List<DiscoveryEndpoint> discoveryEndpoints = discoveryFinderClient.findDiscoveryEndpoints(onlyBpn);
+        final List<DiscoveryEndpoint> discoveryEndpoints = discoveryFinderClient.findDiscoveryEndpoints(onlyBpn)
+                                                                                .endpoints();
         final List<String> connectorEndpoints = discoveryEndpoints.stream()
                                                                   .map(discoveryEndpoint -> discoveryFinderClient.findConnectorEndpoints(
                                                                                                                          discoveryEndpoint.endpointAddress(),
@@ -60,8 +60,7 @@ public class DecentralDigitalTwinRegistryService implements DigitalTwinRegistryS
                                                                                                                  .filter(edcDiscoveryResult -> edcDiscoveryResult.bpn()
                                                                                                                                                                  .equals(key.bpn()))
                                                                                                                  .map(EdcDiscoveryResult::connectorEndpoint)
-                                                                                                                 .collect(
-                                                                                                                         Collectors.toList()))
+                                                                                                                 .toList())
                                                                   .flatMap(List::stream)
                                                                   .flatMap(List::stream)
                                                                   .toList();
